--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                         <li><a href="link/othercactusindex.html#glaucescens">Ferocactus glaucescens</a></li>
                         <li><a href="link/othercactusindex.html#stainesii">Ferocactus stainesii</a></li>
                         <li><a href="link/othercactusindex.html#opuntia">Opuntia</a></li>
+                        <li><a href="link/othercactusindex.html#monacanthamonstruosisvariegata">Opuntia monacantha monstruosis variegata</a></li>
                         <li><a href="link/othercactusindex.html#celsianus">Oreocereus celsianus</a></li>
                         <li><a href="link/othercactusindex.html#azureus">Pilosocereus azureus</a></li>
                         <li><a href="link/othercactusindex.html#coryne">Stetsonia coryne</a></li>
@@ -332,7 +333,7 @@
         <hr><hr>
 <main>                                                  <!-- CATÉGORIES DE PLANTES -->
 <section class="category-plant">                        <!-- ADENIUM -->
-  <button class="category-plant-title"><div class="category"><div class="category-out">Adenium</div><div class="category-in">Cliquez sur l'image pour en savoir plus</div></div><a href="link/adeniumindex.html">
+  <button class="category-plant-title"><div class="category"><div class="category-out">Mes Adenium</div><div class="category-in">Cliquez sur l'image pour en savoir plus</div></div><a href="link/adeniumindex.html">
     <img class="resize" src="assets/img/welcome/species/adenium.jpg" alt="En savoir plus sur mes Adenium" title="En savoir plus sur mes Adenium" onmouseover="javascript:this.src='assets/img/welcome/species/adenium2.jpg';"onmouseout="javascript:this.src='assets/img/welcome/species/adenium.jpg';"/></a></button>
 </section>
 <section class="category-plant">                        <!-- ALOCASIA -->
@@ -446,6 +447,7 @@
 </main>
         <hr><hr>
 <footer>                                                <!-- BOUTONS ARROSAGES - BOUTURAGES - PARASITES - REMPOTAGES - TOP -->
+    <!--
     <div class="all-btn-footer">
         <button class="btn-nav-footer nav-watering"><a href="link/wateringindex.html" alt="En savoir plus sur mes arrosages" title="En savoir plus sur mes arrosages" >Arrosages </a></button>
         <button class="btn-nav-footer nav-cutting"><a href="link/cuttingindex.html" alt="En savoir plus sur mes bouturages" title="En savoir plus sur mes bouturages" >Bouturages</a></button>
@@ -453,6 +455,7 @@
         <button class="btn-nav-footer nav-repotting"><a href="link/repottingindex.html" alt="En savoir plus sur mes rempotages" title="En savoir plus sur mes rempotages" >Rempotages</a></button>
         <button class="btn-nav-footer nav-install-tillandsia"><a href="link/installtillandsia.html" alt="Comment j'accroche mes Tillandsia" title="Comment j'accroche mes Tillandsia" >Accrochage Tillandsia</a></button>
     </div>
+    -->
 
     <div class="btn-top">
         <button class="btn-top-footer"><a href="#top">Aller direct sur le haut de la page.</a></button>
