--- a/link/othercactusgallery.html
+++ b/link/othercactusgallery.html
@@ -17,19 +17,21 @@
             <div>
                 <h1 class="title-gallery-category" id="top"> Galerie photo de mes autres Cactus</h1>
             </div>
-                <h2 class="sub-title-gallery-category">Végétaux présents ici:
-                    <a href="#myriostigma">Astrophytum myriostigma,</a>   
-                    <a href="#cornifera">Coryphanta cornifera,</a>   
-                    <a href="#grusonii">Echinocactus grusonii,</a>
-                    <a href="#multicostatus">Echinofossulocactus multicostatus,</a>
-                    <a href="#subdenudata">Echinopsis subdenudata,</a>
-                    <a href="#espostoa">Espostoa,</a>  
-                    <a href="#glaucescens">Ferocactus glaucescens,</a>
-                    <a href="#stainesii">Ferocactus stainesii,</a>
-                    <a href="#opuntia">Opuntia,</a>
-                    <a href="#celsianus">Oreocereus celsianus,</a>
-                    <a href="#coryne">Stetsonia coryne.</a>
-                </h2>        
+            <h2 class="sub-title-gallery-category">Végétaux présents ici: 
+                <a href="#myriostigma">Astrophytum myriostigma,</a>  
+                <a href="#cornifera">Coryphanta cornifera,</a>  
+                <a href="#grusonii">Echinocactus grusonii,</a>
+                <a href="#multicostatus">Echinofossulocactus multicostatus,</a>
+                <a href="#subdenudata">Echinopsis subdenudata,</a>
+                <a href="#espostoa">Espostoa,</a>
+                <a href="#glaucescens">Ferocactus glaucescens,</a> 
+                <a href="#stainesii">Ferocactus stainesii,</a> 
+                <a href="#opuntia">Opuntia,</a>
+                <a href="#monacanthamonstruosisvariegata">Opuntia monacantha monstruosis variegata,</a>
+                <a href="#celsianus">Oreocereus celsianus,</a>
+                <a href="#celsianus">Pilosocereus azureus,</a>
+                <a href="#coryne">Stetsonia coryne.</a>
+            </h2>  
     </header>
             <hr>
             <div class="species-title-gallery-category" id="myriostigma">Astrophytum myriostigma
@@ -141,6 +143,21 @@
         <img class="flex" src="../assets/img/othercactus/gallery/opuntia(7).jpg" alt="opuntia" title="opuntia"/>
         <img class="flex" src="../assets/img/othercactus/gallery/opuntia(8).jpg" alt="opuntia" title="opuntia"/>
     </section>
+    <hr>
+            <div class="species-title-gallery-category" id="monacanthamonstruosisvariegata">Opuntia monacantha monstruosis variegata
+                <a href="othercactusindex.html#monacanthamonstruosisvariegata">Voir la fiche info</a>
+            </div>
+            <hr>
+    <section>                                                                   <!-- OPUNTIA MONACANTHA MONSTRUOSIS VARIEGATA -->
+        <img class="flex" src="../assets/img/othercactus/gallery/opuntiamonacanthamonstruosisvariegata(1).jpg" alt="Opuntia monacantha monstruosis variegata" title="Opuntia monacantha monstruosis variegata"/>
+        <img class="flex" src="../assets/img/othercactus/gallery/opuntiamonacanthamonstruosisvariegata(2).jpg" alt="Opuntia monacantha monstruosis variegata" title="Opuntia monacantha monstruosis variegata"/>
+        <img class="flex" src="../assets/img/othercactus/gallery/opuntiamonacanthamonstruosisvariegata(3).jpg" alt="Opuntia monacantha monstruosis variegata" title="Opuntia monacantha monstruosis variegata"/>
+        <img class="flex" src="../assets/img/othercactus/gallery/opuntiamonacanthamonstruosisvariegata(4).jpg" alt="Opuntia monacantha monstruosis variegata" title="Opuntia monacantha monstruosis variegata"/>
+        <img class="flex" src="../assets/img/othercactus/gallery/opuntiamonacanthamonstruosisvariegata(5).jpg" alt="Opuntia monacantha monstruosis variegata" title="Opuntia monacantha monstruosis variegata"/>
+        <img class="flex" src="../assets/img/othercactus/gallery/opuntiamonacanthamonstruosisvariegata(6).jpg" alt="Opuntia monacantha monstruosis variegata" title="Opuntia monacantha monstruosis variegata"/>
+        <img class="flex" src="../assets/img/othercactus/gallery/opuntiamonacanthamonstruosisvariegata(7).jpg" alt="Opuntia monacantha monstruosis variegata" title="Opuntia monacantha monstruosis variegata"/>
+        <img class="flex" src="../assets/img/othercactus/gallery/opuntiamonacanthamonstruosisvariegata(8).jpg" alt="Opuntia monacantha monstruosis variegata" title="Opuntia monacantha monstruosis variegata"/>
+    </section>
             <hr>
             <div class="species-title-gallery-category" id="celsianus">Oreocereus celsianus
                 <a href="othercactusindex.html#celsianus">Voir la fiche info</a>
@@ -169,7 +186,6 @@
         <img class="flex" src="../assets/img/othercactus/gallery/stetsoniacoryne(2).jpg" alt="Stetsonia coryne" title="Stetsonia coryne"/>
         <img class="flex" src="../assets/img/othercactus/gallery/stetsoniacoryne(3).jpg" alt="Stetsonia coryne" title="Stetsonia coryne"/>
     </section>
-
 </main>
 <nav class="btn-index-category">                                                <!-- BOUTONS DE NAVIGATION ET TOP -->
     <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
