--- a/link/otherplantsindex.html
+++ b/link/otherplantsindex.html
@@ -107,7 +107,8 @@
             <div class="index-category-tab-content" id="jurassica5" hidden="hidden">Je les arrose un peu moins souvent, je laisse juste le substrat sécher un peu sur le haut.
             </div>
             <div class="index-category-tab-content" id="jurassica6" hidden="hidden">J'utilise un simple terreau pour plantes d'intérieur mélangé avec de la fibre de coco et du sable de rivière. <br/> Je les garde soit dans une jardinière en plastique à plusieurs ou en pots en plastique de taille moyenne.
-                <a class="species-repotting-info" href="repottingsolanumquitoensejurassica.html" alt="Solanum quitoense jurassica" title="Solanum quitoense jurassica">Voir comment je rempote les Solanum quitoense jurassica</a>
+                <a class="species-repotting-info" href="repottingsolanumquitoensejurassica.html" alt="solanum quitoense jurassica" title="solanum quitoense jurassica">Voir comment je rempote les Solanum quitoense jurassica</a>
+                <a class="species-repotting-info" href="sowingsolanumquitoensejurassica.html" alt="semis solanum quitoense jurassica" title="semis solanum quitoense jurassica">Voir mes semis de Solanum quitoense jurassica</a>
             </div>
         </section>
         <hr>
