--- a/link/phalaenopsisindex.html
+++ b/link/phalaenopsisindex.html
@@ -305,6 +305,7 @@
         <div class="index-category-tab-content" id="petiteblanchesuspendue5" hidden="hidden">Je diminue les fréquences d'arrosage en veillant juste à ce que le substrat reste humide. <br>Toujours au-dessus de la baignoire pour l'eau qui égoutte. <br>Et aussi par vaporisation des racines.
         </div>
         <div class="index-category-tab-content" id="petiteblanchesuspendue6" hidden="hidden">Je prépare un mélange d'écorces de pin. <br/> Je les garde en suspension dans une demi sphère faite avec du grillage. <br/> 1 se trouve sur le côté et 1 se trouve sur le haut.
+          <a class="species-repotting-info" href="phalaenopsissuspended.html" alt="création suspension en grillage pour orchidées" title="création suspension en grillage pour orchidées">Voir comment j'ai pratiqué pour la création d'une suspension en grillage pour orchidées</a>
         </div>
       </section>
         <hr>
@@ -331,6 +332,7 @@
         <div class="index-category-tab-content" id="petitemauvesuspendue5" hidden="hidden">Je diminue les fréquences d'arrosage en veillant juste à ce que le substrat reste humide. <br>Toujours au-dessus de la baignoire pour l'eau qui égoutte. <br>Et aussi par vaporisation des racines.
         </div>
         <div class="index-category-tab-content" id="petitemauvesuspendue6" hidden="hidden">Je prépare un mélange d'écorces de pin. <br/> Je les garde en suspension dans une demi sphère faite avec du grillage. <br/> 1 se trouve sur le côté et 1 se trouve sur le haut.
+          <a class="species-repotting-info" href="phalaenopsissuspended.html" alt="création suspension en grillage pour orchidées" title="création suspension en grillage pour orchidées">Voir comment j'ai pratiqué pour la création d'une suspension en grillage pour orchidées</a>
         </div>
       </section>
         <hr>
@@ -358,7 +360,8 @@
         </div>
         <div class="index-category-tab-content" id="petiteroseclaircolonne5" hidden="hidden">Je diminue les fréquences d'arrosage en veillant juste à ce que le substrat reste humide. <br>Vaporisation des racines aériennes régulière.
         </div>
-        <div class="index-category-tab-content" id="petiteroseclaircolonne6" hidden="hidden">Je lui prépare un mélange de fibre de coco ou de terreau pour orchidées avec des écorces pour orchidées. <br/> Je la garde en jardinière plastique (non-transparente) avec plusieurs autres Phalaenopsis pour donner un effet de groupe. 
+        <div class="index-category-tab-content" id="petiteroseclaircolonne6" hidden="hidden">Je lui prépare un mélange de fibre de coco ou de terreau pour orchidées avec des écorces pour orchidées. <br/> Je la garde en jardinière plastique (non-transparente) avec plusieurs autres Phalaenopsis pour donner un effet de groupe.
+          <a class="species-repotting-info" href="phalaenopsiscolumn.html" alt="création colonne en grillage pour orchidées" title="création colonne en grillage pour orchidées">Voir comment j'ai pratiqué pour la création d'une colonne en grillage pour orchidées</a>
         </div>
       </section>
         <hr>
@@ -387,6 +390,7 @@
         <div class="index-category-tab-content" id="petiterosefonceecolonne5" hidden="hidden">Je diminue les fréquences d'arrosage en veillant juste à ce que le substrat reste humide. <br>Vaporisation des racines aériennes régulière.
         </div>
         <div class="index-category-tab-content" id="petiterosefonceecolonne6" hidden="hidden">Je lui prépare un mélange de fibre de coco ou de terreau pour orchidées avec des écorces pour orchidées. <br/> Je la garde en jardinière plastique (non-transparente) avec plusieurs autres Phalaenopsis pour donner un effet de groupe.
+          <a class="species-repotting-info" href="phalaenopsiscolumn.html" alt="création colonne en grillage pour orchidées" title="création colonne en grillage pour orchidées">Voir comment j'ai pratiqué pour la création d'une colonne en grillage pour orchidées</a>
         </div>
       </section>
         <hr>
@@ -549,6 +553,7 @@
         <div class="index-category-tab-content" id="yellowcolonne5" hidden="hidden">Je diminue les fréquences d'arrosage en veillant juste à ce que le substrat reste humide. <br>Vaporisation des racines aériennes régulière.
         </div>
         <div class="index-category-tab-content" id="yellowcolonne6" hidden="hidden">Je lui prépare un mélange de fibre de coco ou de terreau pour orchidées avec des écorces pour orchidées. <br/> Je la garde dans un simple pot en plastique transparent pour le moment.
+          <a class="species-repotting-info" href="phalaenopsiscolumn.html" alt="création colonne en grillage pour orchidées" title="création colonne en grillage pour orchidées">Voir comment j'ai pratiqué pour la création d'une colonne en grillage pour orchidées</a>
         </div>
       </section>
         <hr>
