--- a/link/phalaenopsissuspended.html
+++ b/link/phalaenopsissuspended.html
@@ -15,7 +15,7 @@
                     <h1 class="title-species-repotting-desc" id="top">Installation Phalaenopsis en suspension
                     </h1>
                 <p>
-                    <h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter les Phalaenopsis en suspension en créant un substrat adapté à partir de plusieurs éléments avec une demi sphère de suspension en rajoutant du grillage.<br>Celà n'est pas conseillé de le faire durant cette période car une partie est encore en cours de floraison mais, celà n'est pas grave et n'aura aucne incidence sur la floraison.
+                    <h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour installer les Phalaenopsis en suspension en créant un substrat adapté à partir de plusieurs éléments avec une demi sphère de suspension en rajoutant du grillage.<br>Celà n'est pas conseillé de le faire durant cette période car une partie est encore en cours de floraison mais, celà n'est pas grave et n'aura aucne incidence sur la floraison.
                     </h2>
                 </p>
             </div>
