--- a/link/repottingindex.html
+++ b/link/repottingindex.html
@@ -21,7 +21,7 @@
      </header> 
      
      <main>CONSTRUCTION EN COURS !!!</main>
-<!--
+
     <section> 
     <header><div class="def">Tout d'abord, je vais présenter mes différents éléments qui sont utilisés pour réaliser mes différents substrats ainsi que les raisons pour lesquelles je les utilise.<br/>
         Le substrat est ce qui sert de support dans/ou sur lequel pourront se développer les racines.</div>
@@ -30,12 +30,12 @@
     <div class="substrat">
 
       <div class="group"><div id="akadama"><a href="../assets/img/repotting/largeimg/akadama.jpg"><img src="../assets/img/repotting/smallimg/akadama.jpg" alt="akadama" title="Agrandir l'image"/></a></div>
-      <div class="subsubtitle">Akadama&nbsp;:</div><a class="desc">L'Akadama est une roche argileuse et granuleuse ayant une couleur brun rouge. Elle est couramment utilisée pour la culture des Bonsaïs.<br/>L'Akadama a la particularité grâce à sa structure et sa granulométrie de garder une bonne aération.<br/> Il assure également un très bon drainage et conserve une humidité idéale pour le développement des racines. Il peut accumuler les nutriments qui seront restitués au fil des arrosages.<br/>De plus, sa couleur donne une très bonne indication sur l'humidité du sol.<br/>En ce qui me concerne, je l'utilise surtout en surface dans mes Cactus et certaines plantes grasses pour son rendu qui me plaît beaucoup.<br/>Du fait qu'avec le temps et les arrosages réguliers, les grains deviennent friables et peuvent donc comprimer le substrat, je ne l'utilise qu'en surface avec des plantes comme mes Cactus et certaines plantes grasses qui ne demandent que peu d'arrosages.<br/>J'ai régulièrement comme une poussière qui en part en fumée lors de mes arrosages lorsque l'Akadama est très sèche, celà est normal.</a></div>
+      <div class="subsubtitle">Akadama&nbsp;:</div><a class="desc">L'Akadama est une roche argileuse et granuleuse ayant une couleur brun rouge. Elle est couramment utilisée pour la culture des Bonsaïs.<br/>L'Akadama a la particularité grâce à sa structure et sa granulométrie de garder une bonne aération.<br/> Il assure également un très bon drainage et conserve une humidité idéale pour le développement des racines. Il peut accumuler les nutriments qui seront restitués au fil des arrosages.<br/>De plus, sa couleur donne une très bonne indication sur l'humidité du sol.<br/>En ce qui me concerne, je l'utilise surtout en surface dans mes Cactus et certaines plantes grasses pour son rendu qui me plaît beaucoup.<br/>Du fait qu'avec le temps et les arrosages réguliers, les grains deviennent friables et peuvent donc comprimer le substrat, je ne l'utilise qu'en surface avec des plantes comme mes Cactus et certaines plantes grasses qui ne demandent que peu d'arrosages.<br/>J'ai régulièrement comme une poussière qui en part en fumée lors de mes arrosages lorsque l'Akadama est très sèche, celà est semble-t-il normal.<br/> Du fait de son prix relativement élevé, je l'utilise de moins en moins.</a></div>
 
       <hr><hr>
 
       <div class="group"><div id="argile"><a href="../assets/img/repotting/largeimg/argile.jpg"><img src="../assets/img/repotting/smallimg/argile.jpg" alt="billes d'argile" title="billes d'argile"/></a></div>
-      <div class="subsubtitle">Billes d'argile&nbsp;:</div><a class="desc">Les billes d'argile sont en fait une argile cuite à haute température.<br/>De par leur particularité d'avoir une multitude de petits trous et de cavités, elles retiennent très bien l'eau avec tous ses nutriments qui seront redistribués au fur et à mesure au reste du substrat.<br/>Mélangées avec du terreau, elles permettent aussi d'avoir un meilleur drainage. Beaucoup les utilisent comme fond drainant dans les pots de culture mais selon moi, celà n'est pas vraiment nécessaire. (Libre à chacun de faire comme il le sent)<br/>Beaucoup les utilisent aussi dans une coupelle remplie d'eau afin de surélever le pot de culture pour éviter le contact avec l'eau et offrir une hygrométrie un peu plus élevée autour de la plante.<br/>En ce qui me concerne, je n'utilise que des billes d'argile de petit calibre que je n'utilise qu'en mélange avec d'autres substrats mais jamais autrement.</a></div>
+      <div class="subsubtitle">Billes d'argile&nbsp;:</div><a class="desc">Les billes d'argile sont en fait une argile cuite à haute température.<br/>De par leur particularité d'avoir une multitude de petits trous et de cavités, elles retiennent très bien l'eau avec tous ses nutriments qui seront redistribués au fur et à mesure au reste du substrat.<br/>Mélangées avec du terreau, elles permettraient aussi d'avoir un meilleur drainage. Beaucoup les utilisent comme fond drainant dans les pots de culture mais selon moi, celà n'est pas vraiment nécessaire. (Libre à chacun de faire comme il le sent)<br/>Beaucoup les utilisent aussi dans une coupelle remplie d'eau afin de surélever le pot de culture pour éviter le contact avec l'eau et offrir une hygrométrie un peu plus élevée autour de la plante.<br/>En ce qui me concerne, je n'utilise que des billes d'argile de petit calibre que je n'utilise qu'en mélange avec d'autres substrats mais jamais autrement et assez peu souvent.</a></div>
 
       <hr><hr>
 
@@ -71,7 +71,7 @@
 
     </div>
     </section>
--->
+
 
   </body>
 </html>  
