--- a/link/repottingopuntiamonacanthamonstruosisvariegata.html
+++ b/link/repottingopuntiamonacanthamonstruosisvariegata.html
@@ -15,8 +15,8 @@
             <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter mon Opuntia monacantha monstruosis variegata en créant un substrat très drainant à partir de plusieurs éléments.</h2></p></div>
         </section>  
                 <section class="nav-button">
-                    <button class="styled-btn-index"><a href="othersucculentsindex.html#opuntiamonacanthamonstruosisvariegata">Fiche info de mon Opuntia monacantha monstruosis variegata</a></button>
-                    <button class="styled-btn-gallery"><a href="othersucculentsgallery.html#opuntiamonacanthamonstruosisvariegata.html">Galerie photos de mon Opuntia monacantha monstruosis variegata</a></button>
+                    <button class="styled-btn-index"><a href="othercactusindex.html#monacanthamonstruosisvariegata">Fiche info de mon Opuntia monacantha monstruosis variegata</a></button>
+                    <button class="styled-btn-gallery"><a href="othercactusgallery.html#monacanthamonstruosisvariegata">Galerie photos de mon Opuntia monacantha monstruosis variegata</a></button>
                     <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
                 </section>
     </header>
