--- a/link/repottingpilosocereusazureus.html
+++ b/link/repottingpilosocereusazureus.html
@@ -51,6 +51,16 @@
             </p>
         </div>
     </section>
+    <section class="species-repotting-step">                                    <!-- JURA -->
+        <div class="species-repotting-img">
+            <img class="responsive-resize" src="../assets/img/repotting/substrat/jura.jpg" alt="graviers jura" title="graviers jura"/>
+        </div>
+        <div class="species-repotting-expl">
+            <p>
+                Ici, des graviers Jura de granulométrie 4 à 8 mm qui serviront en surface.
+            </p>
+        </div>
+    </section>
     <section class="species-repotting-step">                                    <!-- MÉLANGE -->
         <div class="species-repotting-img">
             <img class="responsive-resize" src="../assets/img/repotting/substrat/melangecactussablegraviers.jpg" alt="mélange fait" title="mélange fait"/>
