--- a/modal.html
+++ b/modal.html
@@ -17,6 +17,19 @@
                     <hr>
                         <div class="modal-update-left">
                             <ul>
+                                <li>                                            <!-- 02/08/2021 -->
+                                    <div class="modal-date-flex">
+                                            02/08/2021:
+                                    </div>
+                                    <div class="modal-desc-flex">
+                                        <div>
+                                            &nbsp;&nbsp;_Ajout 
+                                            <a href="link/othercactusindex.html#monacanthamonstruosisvariegata" alt="opuntia monacantha monstruosis variegata" title="opuntia monacantha monstruosis variegata"><strong>Opuntia monacantha monstruosis variegata</strong></a> (Mes Cactus).<br/>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingopuntiamonacanthamonstruosisvariegata.html" alt="rempotage Opuntia monacantha monstruosis variegata" title="rempotage Opuntia monacantha monstruosis variegata"><strong>Opuntia monacantha monstruosis variegata.</strong></a><br>
+                                            &nbsp;&nbsp;_Ajout d'une page monstrant mes semis de  <a class="species-sowing-info" href="link/sowingsolanumquitoensejurassica.html" alt="semis solanum quitoense jurassica" title="semis solanum quitoense jurassica"><strong>Solanum quitoense jurassica.</strong></a><br>
+                                        </div>
+                                    </div>
+                                </li>
                                 <li>                                            <!-- 22/07/2021 -->
                                     <div class="modal-date-flex">
                                             22/07/2021:
@@ -33,7 +46,7 @@
                                             <a href="link/phalaenopsisindex.html#column" alt="phalaenopsis colonne" title="phalaenopsis colonne"><strong>Phalaenopsis colonne</strong></a> (Mes Phalaenopsis).<br/>
                                             &nbsp;&nbsp;_Ajout 
                                             <a href="link/phalaenopsisindex.html#suspended" alt="phalaenopsis suspension" title="phalaenopsis suspension"><strong>Phalaenopsis suspension</strong></a> (Mes Phalaenopsis).<br/>
-                                            &nbsp;&nbsp;_Ajout d'une page expliquant Comment j'installe des <a class="species-repotting-info" href="link/phalaenopsissuspended.html" alt="Installation phalaenopsis en suspension" title="Installation phalaenopsis en suspension"><strong>Phalaenopsis en suspension.</strong></a><br>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment j'installe des <a class="species-repotting-info" href="link/phalaenopsissuspended.html" alt="Installation phalaenopsis en suspension" title="Installation phalaenopsis en suspension"><strong>Phalaenopsis en suspension.</strong></a><br>
                                             &nbsp;&nbsp;_Ajout d'un lien vers une vidéo montrant comment j'arrose abondamment mes <a class="species-repotting-info" href="link/phalaenopsisindex.html#suspended4" alt="Installation phalaenopsis en colonne" title="Installation phalaenopsis en colonne"><strong>Phalaenopsis en suspension en été.</strong></a>
                                         </div>
                                     </div>
