--- a/link/othercactusindex.html
+++ b/link/othercactusindex.html
@@ -27,6 +27,7 @@
                     <a href="#glaucescens">Ferocactus glaucescens,</a> 
                     <a href="#stainesii">Ferocactus stainesii,</a> 
                     <a href="#opuntia">Opuntia,</a>
+                    <a href="#monacanthamonstruosisvariegata">Opuntia monacantha monstruosis variegata,</a>
                     <a href="#celsianus">Oreocereus celsianus,</a>
                     <a href="#celsianus">Pilosocereus azureus,</a>
                     <a href="#coryne">Stetsonia coryne.</a>
@@ -271,6 +272,35 @@
             </div>
             <div class="index-category-tab-content" id="opuntia6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je garnis le haut de graviers de Jura surtout car j'aime bien le rendu qui fait un peu désertique. <br/>Je le garde dans un pot en terre-cuite de bonne taille vu qu'ils sont plusieurs.
             </div>
+        </section>
+        <hr>
+        <section class="index-category-system-tabs">                            <!-- OPUNTIA MONACANTHA MONSTRUOSIS VARIEGATA -->
+            <nav-tabs class="index-category-nav-tabs" id="monacanthamonstruosisvariegata">
+                <a href="#monacanthamonstruosisvariegata1" aria-selected="true">Nom</a>
+                <a href="#monacanthamonstruosisvariegata2">Exposition en été</a>
+                <a href="#monacanthamonstruosisvariegata3">Exposition en hiver</a>
+                <a href="#monacanthamonstruosisvariegata4">Arrosage en été</a>
+                <a href="#monacanthamonstruosisvariegata5">Arrosage en hiver</a>
+                <a href="#monacanthamonstruosisvariegata6">Rempotage</a>
+            </nav-tabs>   
+            <div class="index-category-tab-content" id="monacanthamonstruosisvariegata1"><span class="species">Opuntia monacantha monstruosis variegata<a href="othercactusgallery.html#monacanthamonstruosisvariegata">Voir la galerie photo</a></span>
+                    <img class="flex2" src="../assets/img/othercactus/index/opuntiamonacanthamonstruosisvariegata(1).jpg" alt="Opuntia monacantha monstruosis variegata" title="Opuntia monacantha monstruosis variegata"/>
+                    <img class="flex2" src="../assets/img/othercactus/index/opuntiamonacanthamonstruosisvariegata(2).jpg" alt="Opuntia monacantha monstruosis variegata" title="Opuntia monacantha monstruosis variegata"/>
+                    <img class="flex2" src="../assets/img/othercactus/index/opuntiamonacanthamonstruosisvariegata(3).jpg" alt="Opuntia monacantha monstruosis variegata" title="Opuntia monacantha monstruosis variegata"/>
+                    <img class="flex2" src="../assets/img/othercactus/index/opuntiamonacanthamonstruosisvariegata(4).jpg" alt="Opuntia monacantha monstruosis variegata" title="Opuntia monacantha monstruosis variegata"/>
+                    <img class="flex2" src="../assets/img/othercactus/index/opuntiamonacanthamonstruosisvariegata(5).jpg" alt="Opuntia monacantha monstruosis variegata" title="Opuntia monacantha monstruosis variegata"/>
+            </div>   
+            <div class="index-category-tab-content" id="monacanthamonstruosisvariegata2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai ou début Juin jusque courant Octobre en plein soleil direct toute la journée. <br/>Je ne le laisse pas dehors si les nuits sont trop froides comme par exemple sous les 10°C. <br/>Doit avoir été acclimaté avant de rester en plein soleil.
+            </div>
+            <div class="index-category-tab-content" id="monacanthamonstruosisvariegata3" hidden="hidden">Je le laisse en intérieur dans un endroit très lumineux recevant le soleil direct contre une fenêtre ou la température ne descendra jamais sous les 10°C.
+            </div>
+            <div class="index-category-tab-content" id="monacanthamonstruosisvariegata4" hidden="hidden">Je ne l'arrose que très peu durant de longues périodes chaudes sans pluie. <br/>En général par bassinage car, la chaleur et le soleil feront sécher la motte assez rapidement sans risque que la moisissure ne s'installe.
+            </div>
+            <div class="index-category-tab-content" id="monacanthamonstruosisvariegata5" hidden="hidden">Je ne l'arrose pas du tout durant plusieurs mois sauf si je remarque qu'ils comencent à se fripper.
+            </div>
+            <div class="index-category-tab-content" id="monacanthamonstruosisvariegata6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je garnis le haut de graviers de Jura surtout car j'aime bien le rendu qui fait un peu désertique. <br/>Je le garde dans un pot en terre-cuite de bonne taille. <br>
+                <a class="species-repotting-info" href="repottingopuntiamonacanthamonstruosisvariegata.html" alt="Rempotage Opuntia monacantha monstruosis variegata" title="Rempotage Opuntia monacantha monstruosis variegata">Voir comment je rempote les Opuntia monacantha monstruosis variegata</a>
+                </div>
         </section>
         <hr>
         <section class="index-category-system-tabs">                            <!-- OREOCEREUS CELSIANUS -->
